# siakad

./: README.md  pyproject.toml  request.http
siakad/: alembic.ini  initial_data.py  main.py  requirements.txt
siakad/alembic/: env.py
siakad/alembic/versions/: d5eba36582ea_add_foto.py
siakad/api/: deps.py  main.py
siakad/api/routes/: login.py  register.py  user.py
siakad/config/: config.py  db.py  security.py
siakad/controllers/: login.py  register.py  users.py
siakad/models/: __init__.py  token.py  users.py
siakad/utils/: foto.py
